--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
     - name: Set up Python ${{matrix.node-version}}
       uses: actions/setup-python@v2
+      with: 
+        python-version: ${{ matrix.python-version }}
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Test
       run: python py/test_money.py -v
       shell: bash
